--- a/src/styles/films.module.scss
+++ b/src/styles/films.module.scss
@@ -41,7 +41,7 @@
   }
 }
 
-.pizzaCard {
+.filmCard {
   border: 1px solid #d6d6d6;
   border-radius: 5px;
   width: 16rem;
